# ffmpegC

./: CMakeLists.txt  git-push.sh  main.cpp
include/shared/: Hello.h
include/static/: Hello.h
src/: Hello.cpp
